[package]
name = "VoxelsApplicationService"
version = "0.1.0"
edition = "2024"
description = "DBus service providing a framework for applications in the voxels game ecosystem to identify, collaborate and share resources with eachother."

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
lib-voxels-application = {git="https://github.com/Oxyn4/lib-voxels-directories"}
