[package]
name = "voxels-application-service"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-voxels-application = { git = "https://github.com/Oxyn4/lib-voxels-application" }
dbus = { version = "0.9.7", features = ["futures"] }
dbus-crossroads = "0.5.2"
toml = "0.9.2"
lazy_static = "1.5.0"
uuid = "1.17.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dbus-tokio = { version = "0.7.6", features = ["dbus-crossroads"] }
tokio = { version = "1.46.1", features = ["full"] }
libsql = "0.9.19"
